# stackforge

./: README.md  download_group_and_snap.sh  pyproject.toml  setup.py
.ipynb_checkpoints/: pyproject-checkpoint.toml
examples/: Stackforge tutorial.ipynb  params.ini  stacked_profiles.ipynb  stacked_profiles.py
examples/.ipynb_checkpoints/: stacked_profiles-checkpoint.ipynb  stacked_profiles-checkpoint.py
src/: __init__.py  models.py  priors.py  stackforge.py
src/.ipynb_checkpoints/: stackforge-checkpoint.py
src/__pycache__/: stackforge.ln_likelihood-1045.py39.1.nbc  stackforge.ln_likelihood-1045.py39.nbi  stackforge.ln_likelihood-1046.py39.1.nbc  stackforge.ln_likelihood-1046.py39.nbi
src/helpers/: __init__.py  binner.py  io.py  misc.py
src/helpers/.ipynb_checkpoints/: __init__-checkpoint.py  binner-checkpoint.py  misc-checkpoint.py
src/helpers/__pycache__/: misc.compute_mask-152.py39.1.nbc  misc.compute_mask-152.py39.2.nbc  misc.compute_mask-152.py39.nbi  misc.compute_mask-159.py39.1.nbc  misc.compute_mask-159.py39.2.nbc  misc.compute_mask-159.py39.3.nbc  misc.compute_mask-159.py39.4.nbc  misc.compute_mask-159.py39.nbi  misc.compute_mask-160.py39.1.nbc  misc.compute_mask-160.py39.10.nbc  misc.compute_mask-160.py39.11.nbc  misc.compute_mask-160.py39.12.nbc  misc.compute_mask-160.py39.13.nbc  misc.compute_mask-160.py39.14.nbc  misc.compute_mask-160.py39.15.nbc  misc.compute_mask-160.py39.16.nbc  misc.compute_mask-160.py39.17.nbc  misc.compute_mask-160.py39.2.nbc  misc.compute_mask-160.py39.3.nbc  (+14 more)
src/stackforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
