[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackforge"
version = "0.1.0"
description = "A Python package for stacking and analyzing astrophysical profiles from IllustrisTNG simulations."
readme = "README.md"
authors = [
  { name = "Javier Urrutia", email = "javierul@stanford.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "astropy",
  "emcee",
  "numba",
  "corner",
  "tqdm",
  "h5py"
]

[project.urls]
Homepage = "https://github.com/javierurrutia/stackforge"
[tool.setuptools.packages.find]
where = ["src"]
